force-app/main/default/objects/Opportunity/fields/General_Contractor_Contact__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (General Contractor (Contact))</relationshipLabel>
    <relationshipName>Opportunitiespb1a</relationshipName>
    <type>Lookup</type>
</CustomField>