force-app/main/default/objects/Opportunity/fields/Has_Project_Info_Sheet_been_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Project_Info_Sheet_been_Notes__c</fullName>
    <description>Has Project Info Sheet been Received?</description>
    <label>Has Project Info Sheet been Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>