force-app/main/default/objects/Opportunity/fields/Has_Project_Info_Sheet_been_Received__c.field-meta.xml
<CustomField>
    <fullName>Has_Project_Info_Sheet_been_Received__c</fullName>
    <description>Has Project Info Sheet been Received?</description>
    <label>Has Project Info Sheet been Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>