force-app/main/default/objects/Opportunity/fields/Hours_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Created__c</fullName>
    <description>This calculates the hours since the opportunity was created</description>
    <formula>(NOW() - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>