force-app/main/default/objects/Opportunity/fields/Identified_and_Attached_Service_Items_Qu__c.field-meta.xml
<CustomField>
    <fullName>Identified_and_Attached_Service_Items_Qu__c</fullName>
    <description>Identified and Attached Service Items/Quotes?</description>
    <label>Identified and Attached Service Items/Qu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>