force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>List of industry types.</description>
    <inlineHelpText>Select what type of industry this opportunity is for.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Amusement Park</fullName>
            </value>
            <value>
                <fullName>Apartment/Condo</fullName>
            </value>
            <value>
                <fullName>Church or Religious Center</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>General Office</fullName>
            </value>
            <value>
                <fullName>Government - Federal</fullName>
            </value>
            <value>
                <fullName>Government - Local</fullName>
            </value>
            <value>
                <fullName>Government - State</fullName>
            </value>
            <value>
                <fullName>Heavy Industrial</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Hotel/Hospitality</fullName>
            </value>
            <value>
                <fullName>K-12 Education</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Light Industrial</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical / Hospital</fullName>
            </value>
            <value>
                <fullName>Mixed Use - Commercial/Residential</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Park/Public Facility</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Rec Center</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Stadium/Convention Center</fullName>
            </value>
            <value>
                <fullName>Theater/Amphitheater</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>