force-app/main/default/objects/Opportunity/fields/Inventory_Cost_total__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost_total__c</fullName>
    <label>Inventory Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>