force-app/main/default/objects/Opportunity/fields/Is_Bidders__c.field-meta.xml
<CustomField>
    <fullName>Is_Bidders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bidders</label>
    <type>Checkbox</type>
</CustomField>