force-app/main/default/objects/Opportunity/fields/isPermissionAssigedinSP__c.field-meta.xml
<CustomField>
    <fullName>isPermissionAssigedinSP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this is temporary filed, only meant to use in data activity to provide permission for history opportunities</inlineHelpText>
    <label>isPermissionAssigedinSP</label>
    <type>Checkbox</type>
</CustomField>