force-app/main/default/objects/Opportunity/fields/Job_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_City__c</fullName>
    <inlineHelpText>What city is the job in?</inlineHelpText>
    <label>Job Site City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>