force-app/main/default/objects/Opportunity/fields/Job_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Site Contact (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Job Site Contact)</relationshipLabel>
    <relationshipName>Opportunitiesf9FH</relationshipName>
    <type>Lookup</type>
</CustomField>