force-app/main/default/objects/Opportunity/fields/Job_Site_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Contact_Mobile__c</fullName>
    <formula>Job_Site_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Site Contact Mobile</label>
    <type>Text</type>
</CustomField>