force-app/main/default/objects/Opportunity/fields/Job_Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Contact_Phone__c</fullName>
    <formula>Job_Site_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Site Contact Phone</label>
    <type>Text</type>
</CustomField>