force-app/main/default/objects/Opportunity/fields/Job_Site_State__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_State__c</fullName>
    <inlineHelpText>What state is the job in?</inlineHelpText>
    <label>Job Site State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>