force-app/main/default/objects/Opportunity/fields/Job_Site_Street__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Street__c</fullName>
    <label>Job Site Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>