force-app/main/default/objects/Opportunity/fields/Job_Site_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Job_Site_Zipcode__c</fullName>
    <label>Job Site Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>