force-app/main/default/objects/Opportunity/fields/Labor_Price__c.field-meta.xml
<CustomField>
    <fullName>Labor_Price__c</fullName>
    <inlineHelpText>What is the cost of labor on this repair job?</inlineHelpText>
    <label>Labor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>