force-app/main/default/objects/Opportunity/fields/Last_Chatter_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Chatter_Action__c</fullName>
    <label>Last Chatter Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>