force-app/main/default/objects/Opportunity/fields/Last_Chatter_Feed_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Chatter_Feed_Update__c</fullName>
    <label>Last Chatter Feed Update</label>
    <type>Date</type>
</CustomField>