force-app/main/default/objects/Opportunity/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>