force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Didn&apos;t follow up</fullName>
            </value>
            <value>
                <fullName>Incorrect fit</fullName>
            </value>
            <value>
                <fullName>Packaged out</fullName>
            </value>
            <value>
                <fullName>Owner preference of other product(s)</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>