force-app/main/default/objects/Opportunity/fields/Lull__c.field-meta.xml
<CustomField>
    <fullName>Lull__c</fullName>
    <inlineHelpText>Is a Lull needed for this job?</inlineHelpText>
    <label>Lull</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unusure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>