force-app/main/default/objects/Opportunity/fields/Man_Lift_JLG__c.field-meta.xml
<CustomField>
    <fullName>Man_Lift_JLG__c</fullName>
    <inlineHelpText>Is a man life needed for this job?</inlineHelpText>
    <label>Man Lift (JLG)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>