force-app/main/default/objects/Opportunity/fields/Manufacturer_2__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_2__c</fullName>
    <inlineHelpText>Select 2nd manufacturer if required</inlineHelpText>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marley® | Cooling Towers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>