force-app/main/default/objects/Opportunity/fields/Margin_Adjusted_Notes__c.field-meta.xml
<CustomField>
    <fullName>Margin_Adjusted_Notes__c</fullName>
    <description>Margin Adjusted?</description>
    <label>Margin Adjusted Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>