force-app/main/default/objects/Opportunity/fields/MarginBooked__c.field-meta.xml
<CustomField>
    <fullName>MarginBooked__c</fullName>
    <description>From project financials tab MARGIN-(TOTAL)
TOTAL
And Even it is used for calculating (Total Margin (booked )) for Sales Result-DB</description>
    <formula>IF(ISBLANK(Active_Financial_Quote__r.Commissions_and_Rebates__c  ) ,0 , Active_Financial_Quote__r.Commissions_and_Rebates__c  ) + 
IF(ISBLANK( Active_Financial_Quote__r.Total_Buy_Resell_Margin__c ) ,0 , Active_Financial_Quote__r.Total_Buy_Resell_Margin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active_Financial_Quote__r.Commissions_and_Rebates__c  +   Active_Financial_Quote__r.Total_Buy_Resell_Margin__c</inlineHelpText>
    <label>MARGIN-TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>