force-app/main/default/objects/Opportunity/fields/Mechanical_Contractor_10__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Contractor_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the company we are bidding to.</inlineHelpText>
    <label>Mechanical Contractor 10 (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Company 10)</relationshipLabel>
    <relationshipName>OpportunitiesADra</relationshipName>
    <type>Lookup</type>
</CustomField>