force-app/main/default/objects/Opportunity/fields/Mechanical_Contractor_1__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Contractor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the company we are bidding to.</inlineHelpText>
    <label>Mechanical Contractor 1 (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Company 1)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>