force-app/main/default/objects/Opportunity/fields/Mechanical_Contractor_2__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Contractor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the company we are bidding to.</inlineHelpText>
    <label>Mechanical Contractor 2 (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Company 2)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>