force-app/main/default/objects/Opportunity/fields/Midwest_Machinery_Project__c.field-meta.xml
<CustomField>
    <fullName>Midwest_Machinery_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midwest Machinery Project</label>
    <type>Checkbox</type>
</CustomField>