force-app/main/default/objects/Opportunity/fields/MostRecentBillingDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentBillingDate__c</fullName>
    <label>Date of Most Recent Billing</label>
    <type>Date</type>
</CustomField>