force-app/main/default/objects/Opportunity/fields/New_Customer_has_customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_has_customer_Notes__c</fullName>
    <description>New Customer - has customer provide completed credit applications and resale certificate if applicable and return to accounting?</description>
    <label>New Customer - has customer Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>