force-app/main/default/objects/Opportunity/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Add any notes about the project that would be of value to someone in the future looking back at this project.</inlineHelpText>
    <label>Notes/Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>