force-app/main/default/objects/Opportunity/fields/Number_of_Cells__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cells__c</fullName>
    <inlineHelpText>How many cells are in this tower?</inlineHelpText>
    <label>Number of Cells</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>