force-app/main/default/objects/Opportunity/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <inlineHelpText>Which Midwest Group office is this for?</inlineHelpText>
    <label>Midwest Group Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Midwest Machinery STL</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery KC</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery OK</fullName>
            </value>
            <value>
                <fullName>Engineered Products</fullName>
            </value>
            <value>
                <fullName>MaRRS</fullName>
            </value>
            <value>
                <fullName>Midwest Industrial Builders</fullName>
            </value>
            <value>
                <fullName>Spark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>