force-app/main/default/objects/Opportunity/fields/Opportunity_Info_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Info_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who did you hear about this opportunity from originally?</inlineHelpText>
    <label>Opportunity Source Contact (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Info Source)</relationshipLabel>
    <relationshipName>OpportunitiesJwla</relationshipName>
    <type>Lookup</type>
</CustomField>