force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <description>Selection of opportunity sources.</description>
    <inlineHelpText>Select where you heard about the opportunity.</inlineHelpText>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Business Journal</fullName>
            </value>
            <value>
                <fullName>Contractor Bid Notification</fullName>
            </value>
            <value>
                <fullName>Email Submission</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>iSqFt</fullName>
                <label>ConstructConnect</label>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Call In RFQ</fullName>
            </value>
            <value>
                <fullName>Email RFQ</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>