force-app/main/default/objects/Opportunity/fields/Order_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Lead_Time__c</fullName>
    <label>Customer Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Tower is Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>