force-app/main/default/objects/Opportunity/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>