force-app/main/default/objects/Opportunity/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>