force-app/main/default/objects/Opportunity/fields/Origin_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Origin_PostalCode__c</fullName>
    <label>Origin PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>