force-app/main/default/objects/Opportunity/fields/Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_State__c</fullName>
    <label>Origin State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>