force-app/main/default/objects/Opportunity/fields/Origin_Street__c.field-meta.xml
<CustomField>
    <fullName>Origin_Street__c</fullName>
    <label>Origin Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>