force-app/main/default/objects/Opportunity/fields/OriginalName__c.field-meta.xml
<CustomField>
    <fullName>OriginalName__c</fullName>
    <label>Original Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>