force-app/main/default/objects/Opportunity/fields/Paid_Billings__c.field-meta.xml
<CustomField>
    <fullName>Paid_Billings__c</fullName>
    <label>Paid Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>